tests/error_display/test_hll_use_after_move_display.err.expected
error: at 6:21: [INIT-UseAfterMove] In function 'f': variable 'x' is used after move
   |
 6 |             let z = x;
   |                     ^
