tests/error_display/test_hll_use_after_move_display.si

        struct Box: Copy + Drop { val: i64 }
        fn f() {
            let x = Box { val: 1 };
            let y = x;
            let z = x;
        }
    